# RISCV-Pipeline

./: CMakeLists.txt  config.h  main.cpp  registers.h  signals.h  simulator.cpp  simulator.h
components/: data_memory.cpp  data_memory.h  insn_memory.h  mux.h  regfile.h
instruction/: instruction.cpp  instruction.h  instruction_mnemonic.h
pipeline/: decode.h  fetch.h  instruction.h
utils/: bit_ops.cpp  bit_ops.h  macros.h
